# pythonpoetry

./: README.md  pyproject.toml
src/pythonpoetry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
